WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64102
Re-enable -webkit-column-break-inside: avoid
https://bugs.webkit.org/show_bug.cgi?id=64102
Summary
Re-enable -webkit-column-break-inside: avoid
mitz
Reported
2011-07-07 09:45:51 PDT
Re-enable -webkit-column-break-inside: avoid
Attachments
Patch
(2.93 KB, patch)
2011-07-07 09:48 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-07-07 09:46:31 PDT
<
rdar://problem/9737435
>
mitz
Comment 2
2011-07-07 09:48:38 PDT
Created
attachment 100000
[details]
Patch
Simon Fraser (smfr)
Comment 3
2011-07-07 10:24:56 PDT
Comment on
attachment 100000
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=100000&action=review
> Source/WebCore/ChangeLog:6 > + <
rdar://problem/9737435
> Re-enable -webkit-column-break-inside: avoid > +
https://bugs.webkit.org/show_bug.cgi?id=64102
> + > + Reviewed by NOBODY (OOPS!).
Can you explain the "re-enable"? Was this regressed unintentionally, or intentionally? If so, when?
mitz
Comment 4
2011-07-07 10:26:49 PDT
(In reply to
comment #3
)
> Can you explain the "re-enable"? Was this regressed unintentionally, or intentionally? If so, when?
Intentionally in <
http://trac.webkit.org/changeset/62632
>.
mitz
Comment 5
2011-07-07 10:28:28 PDT
Committed
r90573
. <
http://trac.webkit.org/r90573
>
Eric Seidel (no email)
Comment 6
2011-07-07 12:25:28 PDT
Comment on
attachment 100000
[details]
Patch Patch 1000000!!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug