<rdar://problem/9737435> Re-enable -webkit-column-break-inside: avoid https://bugs.webkit.org/show_bug.cgi?id=64102

Reviewed by Simon Fraser.

Source/WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::adjustForUnsplittableChild): Treat the child as unsplittable if
'-webkit-column-break-inside: avoid' was specified.

LayoutTests:

* fast/multicol/break-properties-expected.txt:
* fast/multicol/break-properties.html:



Canonical link: https://commits.webkit.org/79838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90573 268f45cc-cd09-0410-ab3c-d52691b4dbfc